<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<TextView
		android:id="@+id/tvpaquere"
		style="@style/titulo"
		android:text="@string/paquete" />

	<ImageView
		android:id="@+id/ivpaquere"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/tvpaquere"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="38dp"
		android:contentDescription="@string/logo"
		android:src="@drawable/sensores" />

	<ListView
		android:id="@android:id/list"
		style="@style/lista"
		android:layout_below="@+id/ivpaquere"
		android:layout_marginTop="38dp" >
	</ListView>

	<TextView
		android:id="@android:id/empty"
		style="@style/labelGrande"
		android:layout_below="@id/ivpaquere"
		android:layout_marginTop="38dp"
		android:text="@string/cargando" />

</RelativeLayout>